--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,9 +1,7 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - Ania126
 
 github_repos:
-  - alshedivat/al-folio
   - twbs/bootstrap
   - jekyll/jekyll
   - jquery/jquery
