--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,9 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  I'm always happy to connect - email is best! 
+hi
+
+#I'm always happy to connect - email is best! 
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
