--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
+  Happy to connect  
 #I'm always happy to connect - email is best! 
 
 # -----------------------------------------------------------------------------
