--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: ania.liu126@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-  ania.liu@link.cuhk.edu.hk 
+#ania.liu@link.cuhk.edu.hk 
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
@@ -111,7 +111,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Happy to connect  
+  I'm always happy to connect - email is best! ania.liu@link.cuhk.edu.hk
 #I'm always happy to connect - email is best! 
 
 # -----------------------------------------------------------------------------
